# recwid

./: Cargo.toml
src/: dispatchable.rs  lib.rs
src/api/: mod.rs
src/api/orders/create_order/: create_order.rs  mod.rs  request.rs  request_builder.rs  response.rs
src/api/products/: mod.rs
src/api/products/search_products/: mod.rs  request.rs  request_builder.rs  response.rs  search_products.rs
src/client/: client.rs
src/product/: product.rs
tests/: integration_test.rs
